헤더, 탭 영역 구현

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,26 @@
 		<link rel="stylesheet" href="../CSS/index.css" />
 		<title>이상데이터</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="all_area">
+			<header class="header_area">
+				<div class="header">
+					이상데이터
+				</div>
+				<!-- <div class="headline"></div> -->
+				<div class="tab_bar_area">
+					<div class="tab_ecoFriendlyCar">
+						<div >친환경 자동차</div>
+					</div>
+					<div class="tab_env">
+						<div >환경오염</div>
+					</div>
+				</div>
+			</header>
+			<main class="main_area">
+				<div></div>
+			</main>
+		</div>
+	</body>
 	<script src="../js/index.js"></script>
 </html>
