--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../CSS/index.css" />
+		<link rel="stylesheet" href="./CSS/index.css" />
 		<title>이상데이터</title>
 	</head>
 	<body>
