그래프 영역 배치, 웹크롤링 영역 배치

--- a/index.html
+++ b/index.html
@@ -14,16 +14,39 @@
 				</div>
 				<!-- <div class="headline"></div> -->
 				<div class="tab_bar_area">
-					<div class="tab_ecoFriendlyCar">
+					<div id="tab_selected" class="tab_ecoFriendlyCar">
 						<div >친환경 자동차</div>
 					</div>
+
 					<div class="tab_env">
 						<div >환경오염</div>
 					</div>
 				</div>
 			</header>
 			<main class="main_area">
-				<div></div>
+				<div class="graph_area">
+					<div>
+						<graph>
+							<img class="img_car" src="https://minchonang.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Fc986a433-99ce-40cb-abbb-bf2d45c9ac77%2F%25EB%2585%2584%25EB%258F%2584%25EB%25B3%2584_%25EC%2588%2598%25EC%25A7%2588%25EC%25A0%2595%25EB%25B3%25B4.png?table=block&id=75a2f203-89dd-43c3-9c55-808552e050aa&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=1600&userId=&cache=v2" alt="noGraphImg"/>
+						</graph>
+						<graph>
+							<img class="img_car" src="https://minchonang.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Fd0c16e00-c40a-448b-b8ee-20fe5a648f60%2FUntitled.jpeg?table=block&id=0efb54d3-8693-4ae8-9f7f-2d4445158bac&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=670&userId=&cache=v2" alt="noGraphImg"/>
+						</graph>
+					</div>
+					<div>
+						<graph>
+							<img class="img_car" src="https://minchonang.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Fc986a433-99ce-40cb-abbb-bf2d45c9ac77%2F%25EB%2585%2584%25EB%258F%2584%25EB%25B3%2584_%25EC%2588%2598%25EC%25A7%2588%25EC%25A0%2595%25EB%25B3%25B4.png?table=block&id=75a2f203-89dd-43c3-9c55-808552e050aa&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=1600&userId=&cache=v2" alt="noGraphImg"/>
+						</graph>
+						<graph>
+							<img class="img_car" src="https://minchonang.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Fc986a433-99ce-40cb-abbb-bf2d45c9ac77%2F%25EB%2585%2584%25EB%258F%2584%25EB%25B3%2584_%25EC%2588%2598%25EC%25A7%2588%25EC%25A0%2595%25EB%25B3%25B4.png?table=block&id=75a2f203-89dd-43c3-9c55-808552e050aa&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=1600&userId=&cache=v2" alt="noGraphImg"/>
+						</graph>
+					</div>
+				</div>
+				<div class="comment_area">
+					<comment>
+						~ 크롤링 영역 ~
+					</comment>
+				</div>
 			</main>
 		</div>
 	</body>
