시각화 html, 데이터프레임 보는 버튼, 영역 추가

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./index.css" />
+		<link rel="stylesheet" href="./header.css" />
+		<link rel="stylesheet" href="./graph.css" />
 		<title>이상데이터</title>
 	</head>
 	<body>
@@ -20,7 +22,7 @@
 					</div>
 
 					<div id="tab_env" class="tab_common tab_none" onclick="selectEnv()">
-						<div>환경오염</div>
+						<div>재생에너지</div>
 					</div>
 				</div>
 			</header>
@@ -30,19 +32,20 @@
 				<div id="ecoCar_graph" class="show">
 					<div>
 						<graph>
-							<img class="img_car" src="https://minchonang.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Fc986a433-99ce-40cb-abbb-bf2d45c9ac77%2F%25EB%2585%2584%25EB%258F%2584%25EB%25B3%2584_%25EC%2588%2598%25EC%25A7%2588%25EC%25A0%2595%25EB%25B3%25B4.png?table=block&id=75a2f203-89dd-43c3-9c55-808552e050aa&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=1600&userId=&cache=v2" alt="noGraphImg"/>
-						</graph>
-						<graph>
-							<img class="img_car" src="https://minchonang.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Fd0c16e00-c40a-448b-b8ee-20fe5a648f60%2FUntitled.jpeg?table=block&id=0efb54d3-8693-4ae8-9f7f-2d4445158bac&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=670&userId=&cache=v2" alt="noGraphImg"/>
+							<img class="img_car" src="
+							https://www.notion.so/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2F571d6a8c-a48a-479f-8707-458b9e5200fc%2F%25EC%25A0%2584%25EA%25B8%25B0_%25EC%2588%2598%25EC%2586%258C%25EC%25B0%25A8_20182022_5%25EA%25B0%259C%25EB%2585%2584_%25EA%25B5%25AC%25EB%25A7%25A4_%25ED%2598%2584%25ED%2599%25A9_%25EC%258B%259C%25EA%25B0%2581%25ED%2599%2594.png?table=block&id=53ad7b7b-db4c-4c03-a1bb-de3222e319c5&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=2000&userId=6519112b-50fc-4c6c-b9e6-174d9c3dbad1&cache=v2
+" alt="noGraphImg"/>
 						</graph>
 					</div>
 
 					<div>
 						<graph>
-							<img class="img_car" src="https://minchonang.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Fc986a433-99ce-40cb-abbb-bf2d45c9ac77%2F%25EB%2585%2584%25EB%258F%2584%25EB%25B3%2584_%25EC%2588%2598%25EC%25A7%2588%25EC%25A0%2595%25EB%25B3%25B4.png?table=block&id=75a2f203-89dd-43c3-9c55-808552e050aa&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=1600&userId=&cache=v2" alt="noGraphImg"/>
+							<img class="img_car" src="https://www.notion.so/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2F399ddfa7-e3dc-4b14-a8ca-ff6d72d62f23%2FUntitled.png?table=block&id=51f9b5be-bcd9-4386-ab26-512745c0e5b9&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=2000&userId=6519112b-50fc-4c6c-b9e6-174d9c3dbad1&cache=v2" alt="noGraphImg"/>
 						</graph>
 						<graph>
-							<img class="img_car" src="https://minchonang.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Fc986a433-99ce-40cb-abbb-bf2d45c9ac77%2F%25EB%2585%2584%25EB%258F%2584%25EB%25B3%2584_%25EC%2588%2598%25EC%25A7%2588%25EC%25A0%2595%25EB%25B3%25B4.png?table=block&id=75a2f203-89dd-43c3-9c55-808552e050aa&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=1600&userId=&cache=v2" alt="noGraphImg"/>
+							<img class="img_car" src="
+							https://www.notion.so/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2F02a885fd-e260-4018-99c9-6e268ba6cde0%2FUntitled.png?table=block&id=770b75c3-8180-454c-be28-ea114cc98c7f&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=2000&userId=6519112b-50fc-4c6c-b9e6-174d9c3dbad1&cache=v2
+" alt="noGraphImg"/>
 						</graph>
 					</div>
 <!--					데이터 분석-->
@@ -64,26 +67,56 @@
 				<div id="env_graph" class="hidden">
 					<div>
 						<graph>
-							<img class="img_car" src="https://www.notion.so/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2F49b2e126-c51b-48b9-91d4-132b6e39c18c%2FUntitled.png?table=block&id=3e8a12c2-8dd6-42d9-9569-c6827707d74e&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=2000&userId=6519112b-50fc-4c6c-b9e6-174d9c3dbad1&cache=v2" alt="noGraphImg"/>
+							<iframe
+									name="재생에너지 발전량"
+									src="./html/재생에너지발전량_선그래프.html"
+									width="100%"
+									height="600"
+									frameborder="0">
+							</iframe>
 						</graph>
-						<graph>
-							<img class="img_car" src="https://minchonang.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Fd0c16e00-c40a-448b-b8ee-20fe5a648f60%2FUntitled.jpeg?table=block&id=0efb54d3-8693-4ae8-9f7f-2d4445158bac&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=670&userId=&cache=v2" alt="noGraphImg"/>
-						</graph>
+						<div class="show_dataFrame_area">
+							<show onclick="click_DataFrame('df1')">데이터 프레임 보기</show>
+						</div>
+						<dataframe id="dataFrame1" class="hidden">
+							<iframe
+									name="전체 발전량"
+									src="./html/재생에너지발전량(데이터).html"
+									width="100%"
+									height="300"
+									frameborder="0">
+							</iframe>
+						</dataframe>
 					</div>
 
 					<div>
 						<graph>
-							<img class="img_car" src="https://minchonang.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Fc986a433-99ce-40cb-abbb-bf2d45c9ac77%2F%25EB%2585%2584%25EB%258F%2584%25EB%25B3%2584_%25EC%2588%2598%25EC%25A7%2588%25EC%25A0%2595%25EB%25B3%25B4.png?table=block&id=75a2f203-89dd-43c3-9c55-808552e050aa&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=1600&userId=&cache=v2" alt="noGraphImg"/>
+							<iframe
+									name="대기오염 그래프"
+									src="html/대기오염.html"
+									width="100%"
+									height="600"
+									frameborder="0">
+							</iframe>
 						</graph>
-						<graph>
-							<img class="img_car" src="https://minchonang.notion.site/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Fc986a433-99ce-40cb-abbb-bf2d45c9ac77%2F%25EB%2585%2584%25EB%258F%2584%25EB%25B3%2584_%25EC%2588%2598%25EC%25A7%2588%25EC%25A0%2595%25EB%25B3%25B4.png?table=block&id=75a2f203-89dd-43c3-9c55-808552e050aa&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=1600&userId=&cache=v2" alt="noGraphImg"/>
-						</graph>
+						<div class="show_dataFrame_area">
+							<show onclick="click_DataFrame('df2')">데이터 프레임 보기</show>
+						</div>
+						<dataframe id="dataFrame2" class="hidden">
+							<iframe
+									name="전체 발전량"
+									src="./html/재생에너지발전량(데이터).html"
+									width="100%"
+									height="300"
+									frameborder="0">
+							</iframe>
+						</dataframe>
 					</div>
 					<!--					데이터 분석-->
 					<description>
 						<h2>[데이터 분석]</h2>
 						<ul class="ecoFriendlyCar_desc">
-							<li>점진적으로 증가하거나 점진적으로 감소할 것이라는 예상과는 달리 각각의 요소의 변화가 연도에 따라 감소할 때도 증가할 때도 있는 것을 알 수 있었다.</li>
+							<li>재생에너지 관련 데이터 분석 내용</li>
 							<li>수질을 결정하는 평가 요인들은 각각 해당 년도에 기후, 주변 환경 변화 등에 영향을 받아 불규칙적으로 변화한다는 것을 예상할 수 있다.</li>
 						</ul>
 					</description>
