--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<dataframe id="dataFrame2" class="hidden">
 							<iframe
 									name="전체 발전량"
-									src="./html/재생에너지/재생에너지_전체_발전량_백분율_데이터베이스.html"
+									src="./html/재생에너지/재생에너지_전체_발전량_백분율_데이터프레임.html"
 									width="100%"
 									height="300"
 									frameborder="0">
@@ -137,7 +137,7 @@
 						<dataframe id="dataFrame3" class="hidden">
 							<iframe
 									name="전체 발전량"
-									src="./html/재생에너지/에너지원별_발전량_데이터베이스.html"
+									src="./html/재생에너지/에너지원별_발전량_데이터프레임.html"
 									width="100%"
 									height="300"
 									frameborder="0">
@@ -163,7 +163,7 @@
 						<dataframe id="dataFrame4" class="hidden">
 							<iframe
 									name="전체 발전량"
-									src="./html/재생에너지/수질오염_데이터베이스.html"
+									src="./html/재생에너지/수질오염_데이터프레임.html"
 									width="100%"
 									height="300"
 									frameborder="0">
