임시 배치, 데이터프레임 보기 버튼 활성

--- a/html/재생에너지/수질오염_데이터프레임.html
+++ b/html/재생에너지/수질오염_데이터프레임.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="../../table.css">
+  <link rel="stylesheet" href="../../css/table.css">
 </head>
 <table border="1" class="dataframe">
   <thead>
