--- a/html/재생에너지/대기오염_데이터프레임.html
+++ b/html/재생에너지/대기오염_데이터프레임.html
@@ -1,10 +1,11 @@
+<head>
+  <link rel="stylesheet" href="../../css/table.css">
+</head>
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th>전국단위</th>
       <th>단위</th>
-      <th>2013</th>
-      <th>2014</th>
       <th>2015</th>
       <th>2016</th>
       <th>2017</th>
@@ -19,8 +20,6 @@
     <tr>
       <td>전국</td>
       <td>미세먼지</td>
-      <td>42.0000</td>
-      <td>42.0000</td>
       <td>41.0000</td>
       <td>41.0000</td>
       <td>40.0000</td>
@@ -33,8 +32,6 @@
     <tr>
       <td>전국</td>
       <td>초미세먼지</td>
-      <td>0.0000</td>
-      <td>0.0000</td>
       <td>23.0000</td>
       <td>23.0000</td>
       <td>23.0000</td>
@@ -47,8 +44,6 @@
     <tr>
       <td>전국</td>
       <td>일산화탄소</td>
-      <td>0.4587</td>
-      <td>0.4518</td>
       <td>0.4470</td>
       <td>0.4472</td>
       <td>0.4411</td>
@@ -61,8 +56,6 @@
     <tr>
       <td>전국</td>
       <td>이산화질소</td>
-      <td>0.0165</td>
-      <td>0.0166</td>
       <td>0.0162</td>
       <td>0.0163</td>
       <td>0.0156</td>
@@ -75,8 +68,6 @@
     <tr>
       <td>전국</td>
       <td>아황산가스</td>
-      <td>0.0042</td>
-      <td>0.0041</td>
       <td>0.0039</td>
       <td>0.0037</td>
       <td>0.0034</td>
