--- a/html/재생에너지/재생에너지_전체_발전량_데이터프레임.html
+++ b/html/재생에너지/재생에너지_전체_발전량_데이터프레임.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="../../table.css">
+  <link rel="stylesheet" href="../../css/table.css">
 </head>
 <table border="1" class="dataframe">
   <thead>
