--- a/html/재생에너지/재생에너지_전체_발전량_백분율_데이터프레임.html
+++ b/html/재생에너지/재생에너지_전체_발전량_백분율_데이터프레임.html
@@ -1,11 +1,10 @@
 <head>
-  <link rel="stylesheet" href="../../table.css">
+  <link rel="stylesheet" href="../../css/table.css">
 </head>
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>Unnamed: 0</th>
       <th>에너지원</th>
       <th>연도</th>
       <th>발전량(GWh)</th>
@@ -16,7 +15,6 @@
   <tbody>
     <tr>
       <th>0</th>
-      <td>1</td>
       <td>원자력</td>
       <td>2013</td>
       <td>138784</td>
@@ -25,7 +23,6 @@
     </tr>
     <tr>
       <th>1</th>
-      <td>2</td>
       <td>화력</td>
       <td>2013</td>
       <td>359753</td>
@@ -34,7 +31,6 @@
     </tr>
     <tr>
       <th>2</th>
-      <td>3</td>
       <td>양수</td>
       <td>2013</td>
       <td>4105</td>
@@ -43,7 +39,6 @@
     </tr>
     <tr>
       <th>3</th>
-      <td>4</td>
       <td>신재생 및 기타</td>
       <td>2013</td>
       <td>14506</td>
@@ -52,7 +47,6 @@
     </tr>
     <tr>
       <th>4</th>
-      <td>6</td>
       <td>원자력</td>
       <td>2014</td>
       <td>156407</td>
@@ -61,7 +55,6 @@
     </tr>
     <tr>
       <th>5</th>
-      <td>7</td>
       <td>화력</td>
       <td>2014</td>
       <td>343050</td>
@@ -70,7 +63,6 @@
     </tr>
     <tr>
       <th>6</th>
-      <td>8</td>
       <td>양수</td>
       <td>2014</td>
       <td>5068</td>
@@ -79,7 +71,6 @@
     </tr>
     <tr>
       <th>7</th>
-      <td>9</td>
       <td>신재생 및 기타</td>
       <td>2014</td>
       <td>17446</td>
@@ -88,7 +79,6 @@
     </tr>
     <tr>
       <th>8</th>
-      <td>11</td>
       <td>원자력</td>
       <td>2015</td>
       <td>164762</td>
@@ -97,7 +87,6 @@
     </tr>
     <tr>
       <th>9</th>
-      <td>12</td>
       <td>화력</td>
       <td>2015</td>
       <td>336629</td>
@@ -106,7 +95,6 @@
     </tr>
     <tr>
       <th>10</th>
-      <td>13</td>
       <td>양수</td>
       <td>2015</td>
       <td>3650</td>
@@ -115,7 +103,6 @@
     </tr>
     <tr>
       <th>11</th>
-      <td>14</td>
       <td>신재생 및 기타</td>
       <td>2015</td>
       <td>23050</td>
@@ -124,7 +111,6 @@
     </tr>
     <tr>
       <th>12</th>
-      <td>16</td>
       <td>원자력</td>
       <td>2016</td>
       <td>161995</td>
@@ -133,7 +119,6 @@
     </tr>
     <tr>
       <th>13</th>
-      <td>17</td>
       <td>화력</td>
       <td>2016</td>
       <td>348822</td>
@@ -142,7 +127,6 @@
     </tr>
     <tr>
       <th>14</th>
-      <td>18</td>
       <td>양수</td>
       <td>2016</td>
       <td>3787</td>
@@ -151,7 +135,6 @@
     </tr>
     <tr>
       <th>15</th>
-      <td>19</td>
       <td>신재생 및 기타</td>
       <td>2016</td>
       <td>25837</td>
@@ -160,7 +143,6 @@
     </tr>
     <tr>
       <th>16</th>
-      <td>21</td>
       <td>원자력</td>
       <td>2017</td>
       <td>148427</td>
@@ -169,7 +151,6 @@
     </tr>
     <tr>
       <th>17</th>
-      <td>22</td>
       <td>화력</td>
       <td>2017</td>
       <td>369943</td>
@@ -178,7 +159,6 @@
     </tr>
     <tr>
       <th>18</th>
-      <td>23</td>
       <td>양수</td>
       <td>2017</td>
       <td>4186</td>
@@ -187,7 +167,6 @@
     </tr>
     <tr>
       <th>19</th>
-      <td>24</td>
       <td>신재생 및 기타</td>
       <td>2017</td>
       <td>30974</td>
@@ -196,7 +175,6 @@
     </tr>
     <tr>
       <th>20</th>
-      <td>26</td>
       <td>원자력</td>
       <td>2018</td>
       <td>133505</td>
@@ -205,7 +183,6 @@
     </tr>
     <tr>
       <th>21</th>
-      <td>27</td>
       <td>화력</td>
       <td>2018</td>
       <td>397494</td>
@@ -214,7 +191,6 @@
     </tr>
     <tr>
       <th>22</th>
-      <td>28</td>
       <td>양수</td>
       <td>2018</td>
       <td>3911</td>
@@ -223,7 +199,6 @@
     </tr>
     <tr>
       <th>23</th>
-      <td>29</td>
       <td>신재생 및 기타</td>
       <td>2018</td>
       <td>35736</td>
@@ -232,7 +207,6 @@
     </tr>
     <tr>
       <th>24</th>
-      <td>31</td>
       <td>원자력</td>
       <td>2019</td>
       <td>145910</td>
@@ -241,7 +215,6 @@
     </tr>
     <tr>
       <th>25</th>
-      <td>32</td>
       <td>화력</td>
       <td>2019</td>
       <td>375031</td>
@@ -250,7 +223,6 @@
     </tr>
     <tr>
       <th>26</th>
-      <td>33</td>
       <td>양수</td>
       <td>2019</td>
       <td>3458</td>
@@ -259,7 +231,6 @@
     </tr>
     <tr>
       <th>27</th>
-      <td>34</td>
       <td>신재생 및 기타</td>
       <td>2019</td>
       <td>38641</td>
@@ -268,7 +239,6 @@
     </tr>
     <tr>
       <th>28</th>
-      <td>36</td>
       <td>원자력</td>
       <td>2020</td>
       <td>160184</td>
@@ -277,7 +247,6 @@
     </tr>
     <tr>
       <th>29</th>
-      <td>37</td>
       <td>화력</td>
       <td>2020</td>
       <td>344499</td>
@@ -286,7 +255,6 @@
     </tr>
     <tr>
       <th>30</th>
-      <td>38</td>
       <td>양수</td>
       <td>2020</td>
       <td>3271</td>
@@ -295,7 +263,6 @@
     </tr>
     <tr>
       <th>31</th>
-      <td>39</td>
       <td>신재생 및 기타</td>
       <td>2020</td>
       <td>44208</td>
@@ -304,7 +271,6 @@
     </tr>
     <tr>
       <th>32</th>
-      <td>41</td>
       <td>원자력</td>
       <td>2021</td>
       <td>158015</td>
@@ -313,7 +279,6 @@
     </tr>
     <tr>
       <th>33</th>
-      <td>42</td>
       <td>화력</td>
       <td>2021</td>
       <td>368699</td>
@@ -322,7 +287,6 @@
     </tr>
     <tr>
       <th>34</th>
-      <td>43</td>
       <td>양수</td>
       <td>2021</td>
       <td>3683</td>
@@ -331,7 +295,6 @@
     </tr>
     <tr>
       <th>35</th>
-      <td>44</td>
       <td>신재생 및 기타</td>
       <td>2021</td>
       <td>46412</td>
@@ -340,7 +303,6 @@
     </tr>
     <tr>
       <th>36</th>
-      <td>46</td>
       <td>원자력</td>
       <td>2022</td>
       <td>176054</td>
@@ -349,7 +311,6 @@
     </tr>
     <tr>
       <th>37</th>
-      <td>47</td>
       <td>화력</td>
       <td>2022</td>
       <td>358772</td>
@@ -358,7 +319,6 @@
     </tr>
     <tr>
       <th>38</th>
-      <td>48</td>
       <td>양수</td>
       <td>2022</td>
       <td>3715</td>
@@ -367,7 +327,6 @@
     </tr>
     <tr>
       <th>39</th>
-      <td>49</td>
       <td>신재생 및 기타</td>
       <td>2022</td>
       <td>55860</td>
