--- a/index.html
+++ b/index.html
@@ -22,107 +22,27 @@
          </div>
 
          <div id="tab_env" class="tab_common tab_none" onclick="selectEnv()">
-            <div>대기오염</div>
+            <div>자동차 추천</div>
          </div>
       </div>
    </header>
 
    <!--			그래프 시각화, 데이터 분석 영역 -->
    <main class="main_area">
+      <!--				웹크롤링 -->
+      <div id="comment" class="comment_area">
+         <h1>요즘 핫한 키워드</h1>
+         <comment>
+            <div>
+               <img src="https://www.notion.so/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2Ffa6eeec0-7be7-4789-95c5-339b3afb09e9%2FUntitled.png?table=block&id=4b86d943-50de-49ec-8bcd-a2c44a02e424&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=2000&userId=6519112b-50fc-4c6c-b9e6-174d9c3dbad1&cache=v2" alt="noCommentImg" width="500" height="500">
+            </div>
+            <div>
+               <img src="https://www.notion.so/image/https%3A%2F%2Fprod-files-secure.s3.us-west-2.amazonaws.com%2Fa8f094af-6e08-4df8-9b2b-f7f4eaa9e42d%2F7c7eb0f1-9091-4502-8100-7300ed37fb22%2FUntitled.png?table=block&id=477f3560-95cf-4f39-84a8-b08a2a8f9b1d&spaceId=a8f094af-6e08-4df8-9b2b-f7f4eaa9e42d&width=2000&userId=6519112b-50fc-4c6c-b9e6-174d9c3dbad1&cache=v2" alt="noCommentImg" width="500" height="500">
+            </div>
+         </comment>
+      </div>
       <!--				친환경 자동차 그래프, 데이터 프레임 -->
       <div id="ecoCar_graph" class="show">
-         <div>
-            <graph>
-               <h1>전기차 보조금 가격 변동</h1>
-               <div>
-                  <graph>
-                     <iframe
-                           name="전기차 보조금 가격 변동"
-                           src="./html/친환경자동차/그래프_전기차_보조금.html"
-                           width="100%"
-                           height="600"
-                           frameborder="0">
-                     </iframe>
-                  </graph>
-                  <div id="df_eco1_btn"
-                       class="show_dataFrame_area"
-                       onclick="click_ecoDataFrame('df_eco1')">
-                     <show>데이터 프레임 보기</show>
-                  </div>
-                  <dataframe id="dataFrame1_eco" class="hidden">
-                     <iframe
-                           name="전체 발전량"
-                           src="./html/재생에너지/재생에너지_전체_발전량_데이터프레임.html"
-                           width="100%"
-                           height="300"
-                           frameborder="0">
-                     </iframe>
-                  </dataframe>
-               </div>
-            </graph>
-         </div>
-
-         <div>
-            <graph>
-               <h1>수소차 보조금 가격 변동</h1>
-               <div>
-                  <graph>
-                     <iframe
-                           name="수소차 보조금 가격 변동"
-                           src="./html/친환경자동차/그래프_수소차_보조금.html"
-                           width="100%"
-                           height="600"
-                           frameborder="0">
-                     </iframe>
-                  </graph>
-                  <div id="df_eco2_btn"
-                       class="show_dataFrame_area"
-                       onclick="click_ecoDataFrame('df_eco2')">
-                     <show>데이터 프레임 보기</show>
-                  </div>
-                  <dataframe id="dataFrame2_eco" class="hidden">
-                     <iframe
-                           name="전체 발전량"
-                           src="./html/재생에너지/재생에너지_전체_발전량_데이터프레임.html"
-                           width="100%"
-                           height="300"
-                           frameborder="0">
-                     </iframe>
-                  </dataframe>
-               </div>
-            </graph>
-         </div>
-
-         <div>
-            <graph>
-               <h1>전국 수소/전기 보조금</h1>
-               <div>
-                  <graph>
-                     <iframe
-                           name="전국 수소/전기 보조금"
-                           src="./html/친환경자동차/그래프_수소전기_보조금_평균.html"
-                           width="100%"
-                           height="600"
-                           frameborder="0">
-                     </iframe>
-                  </graph>
-                  <div id="df_eco3_btn"
-                       class="show_dataFrame_area"
-                       onclick="click_ecoDataFrame('df_eco3')">
-                     <show>데이터 프레임 보기</show>
-                  </div>
-                  <dataframe id="dataFrame3_eco" class="hidden">
-                     <iframe
-                           name="전체 발전량"
-                           src="./html/재생에너지/재생에너지_전체_발전량_데이터프레임.html"
-                           width="100%"
-                           height="300"
-                           frameborder="0">
-                     </iframe>
-                  </dataframe>
-               </div>
-            </graph>
-         </div>
 
          <!--					데이터 분석-->
          <description>
@@ -134,159 +54,22 @@
          </description>
       </div>
 
-      <!--				웹크롤링 -->
-      <div id="comment" class="comment_area">
-         <h1>요즘 핫한 키워드</h1>
-         <comment>
-            ~ 웹 크롤링 영역 ~
-         </comment>
-      </div>
+      
 
-      <!--				재생에너지 그래프, 데이터 프레임 -->
+      <!--				친환경 자동차 추천 -->
       <div id="env_graph" class="hidden">
-         <h1>전체 발전량</h1>
          <div>
+            <h1>당신에게 맞는 친환경 자동차는?</h1>
             <graph>
                <iframe
-                     name="연도별 수질정보"
+                     name="자동차 추천"
                      src="./html/재생에너지/재생에너지_전체_발전량_그래프.html"
                      width="100%"
                      height="600"
                      frameborder="0">
                </iframe>
             </graph>
-            <div id="df1_btn"
-                 class="show_dataFrame_area"
-                 onclick="click_DataFrame('df1')">
-               <show>데이터 프레임 보기</show>
-            </div>
-            <dataframe id="dataFrame1" class="hidden">
-               <iframe
-                     name="전체 발전량"
-                     src="./html/재생에너지/재생에너지_전체_발전량_데이터프레임.html"
-                     width="100%"
-                     height="300"
-                     frameborder="0">
-               </iframe>
-            </dataframe>
          </div>
-
-         <h1>전체 발전량 백분율</h1>
-         <div>
-            <graph>
-               <iframe
-                     name="재생에너지 발전량"
-                     src="./html/재생에너지/재생에너지_전체_발전량_백분율_그래프.html"
-                     width="100%"
-                     height="600"
-                     frameborder="0">
-               </iframe>
-            </graph>
-            <div id="df2_btn"
-                 class="show_dataFrame_area"
-                 onclick="click_DataFrame('df2')">
-               <show>데이터 프레임 보기</show>
-            </div>
-            <dataframe id="dataFrame2" class="hidden">
-               <iframe
-                     name="전체 발전량"
-                     src="./html/재생에너지/재생에너지_전체_발전량_백분율_데이터프레임.html"
-                     width="100%"
-                     height="300"
-                     frameborder="0">
-               </iframe>
-            </dataframe>
-         </div>
-
-         <h1>에너지원별 재생에너지 발전량</h1>
-         <div>
-            <graph>
-               <iframe
-                     name="에너지원별 재생에너지 발전량"
-                     src="html/재생에너지/에너지원별_발전량_그래프.html"
-                     width="100%"
-                     height="600"
-                     frameborder="0">
-               </iframe>
-            </graph>
-            <div id="df3_btn"
-                 class="show_dataFrame_area"
-                 onclick="click_DataFrame('df3')">
-               <show>데이터 프레임 보기</show>
-            </div>
-            <dataframe id="dataFrame3" class="hidden">
-               <iframe
-                     name="전체 발전량"
-                     src="./html/재생에너지/에너지원별_발전량_데이터프레임.html"
-                     width="100%"
-                     height="300"
-                     frameborder="0">
-               </iframe>
-            </dataframe>
-         </div>
-
-         <h1>수질 오염</h1>
-         <div>
-            <graph>
-               <iframe
-                     name="수질 오염"
-                     src="html/재생에너지/수질오염_그래프.html"
-                     width="100%"
-                     height="600"
-                     frameborder="0">
-               </iframe>
-            </graph>
-            <div id="df4_btn"
-                 class="show_dataFrame_area"
-                 onclick="click_DataFrame('df4')">
-               <show>데이터 프레임 보기</show>
-            </div>
-            <dataframe id="dataFrame4" class="hidden">
-               <iframe
-                     name="전체 발전량"
-                     src="./html/재생에너지/수질오염_데이터프레임.html"
-                     width="100%"
-                     height="300"
-                     frameborder="0">
-               </iframe>
-            </dataframe>
-         </div>
-
-         <h1>대기 오염</h1>
-         <div>
-            <graph>
-               <iframe
-                     name="대기 오염"
-                     src="html/재생에너지/대기오염_그래프.html"
-                     width="100%"
-                     height="600"
-                     frameborder="0">
-               </iframe>
-            </graph>
-            <div id="df5_btn"
-                 class="show_dataFrame_area"
-                 onclick="click_DataFrame('df5')">
-               <show>데이터 프레임 보기</show>
-            </div>
-            <dataframe id="dataFrame5" class="hidden">
-               <iframe
-                     name="전체 발전량"
-                     src="./html/재생에너지/대기오염_데이터프레임.html"
-                     width="100%"
-                     height="300"
-                     frameborder="0">
-               </iframe>
-            </dataframe>
-         </div>
-
-         <!--					데이터 분석-->
-         <description>
-            <h2>[데이터 분석]</h2>
-            <ul class="ecoFriendlyCar_desc">
-               <li>재생에너지 관련 데이터 분석 내용</li>
-               <li>수질을 결정하는 평가 요인들은 각각 해당 년도에 기후, 주변 환경 변화 등에 영향을 받아 불규칙적으로 변화한다는 것을 예상할 수 있다.</li>
-            </ul>
-         </description>
       </div>
 
    </main>
@@ -294,5 +77,4 @@
 </body>
    <script src="js/head.js"></script>
    <script src="js/graph_eco.js"></script>
-   <script src="js/graph_air.js"></script>
 </html>
