자동차 추천 및 최종 완성

--- a/html/친환경자동차/데이터프레임_수소전기차_등록대수.html
+++ b/html/친환경자동차/데이터프레임_수소전기차_등록대수.html
@@ -1,11 +1,12 @@
 <head>
   <link rel="stylesheet" href="/css/table.css">
 </head>
-<table border="1" class="dataframe">
+<table class="dataframe">
   <thead>
     <tr style="text-align: right;">
-      <th>년도</th>
+      <th></th>
       <th>구분</th>
+      <th>년도</th>
       <th>서울</th>
       <th>부산</th>
       <th>대구</th>
@@ -28,8 +29,9 @@
   </thead>
   <tbody>
     <tr>
-      <td>2016</td>
+      <th>0</th>
       <td>전기</td>
+      <td>2016</td>
       <td>1423</td>
       <td>353</td>
       <td>338</td>
@@ -50,8 +52,9 @@
       <td>9408</td>
     </tr>
     <tr>
-      <td>2017</td>
+      <th>1</th>
       <td>전기</td>
+      <td>2017</td>
       <td>4258</td>
       <td>731</td>
       <td>1705</td>
@@ -72,8 +75,9 @@
       <td>22944</td>
     </tr>
     <tr>
-      <td>2018</td>
+      <th>2</th>
       <td>전기</td>
+      <td>2018</td>
       <td>9290</td>
       <td>1461</td>
       <td>5869</td>
@@ -94,8 +98,9 @@
       <td>53411</td>
     </tr>
     <tr>
-      <td>2019</td>
+      <th>3</th>
       <td>전기</td>
+      <td>2019</td>
       <td>13510</td>
       <td>2835</td>
       <td>10598</td>
@@ -116,8 +121,9 @@
       <td>85788</td>
     </tr>
     <tr>
-      <td>2020</td>
+      <th>4</th>
       <td>전기</td>
+      <td>2020</td>
       <td>20690</td>
       <td>4277</td>
       <td>11373</td>
@@ -138,8 +144,9 @@
       <td>116242</td>
     </tr>
     <tr>
-      <td>2021</td>
+      <th>5</th>
       <td>전기</td>
+      <td>2021</td>
       <td>33999</td>
       <td>9373</td>
       <td>13645</td>
@@ -160,8 +167,9 @@
       <td>179651</td>
     </tr>
     <tr>
-      <td>2022</td>
+      <th>6</th>
       <td>전기</td>
+      <td>2022</td>
       <td>48914</td>
       <td>17617</td>
       <td>19647</td>
@@ -182,8 +190,9 @@
       <td>296216</td>
     </tr>
     <tr>
-      <td>2023</td>
+      <th>7</th>
       <td>전기</td>
+      <td>2023</td>
       <td>60154</td>
       <td>26775</td>
       <td>23769</td>
@@ -204,8 +213,9 @@
       <td>400618</td>
     </tr>
     <tr>
-      <td>2016</td>
+      <th>8</th>
       <td>수소</td>
+      <td>2016</td>
       <td>12</td>
       <td>0</td>
       <td>1</td>
@@ -226,8 +236,9 @@
       <td>70</td>
     </tr>
     <tr>
-      <td>2017</td>
+      <th>9</th>
       <td>수소</td>
+      <td>2017</td>
       <td>13</td>
       <td>0</td>
       <td>1</td>
@@ -248,8 +259,9 @@
       <td>163</td>
     </tr>
     <tr>
-      <td>2018</td>
+      <th>10</th>
       <td>수소</td>
+      <td>2018</td>
       <td>78</td>
       <td>0</td>
       <td>2</td>
@@ -270,8 +282,9 @@
       <td>751</td>
     </tr>
     <tr>
-      <td>2019</td>
+      <th>11</th>
       <td>수소</td>
+      <td>2019</td>
       <td>512</td>
       <td>477</td>
       <td>4</td>
@@ -292,8 +305,9 @@
       <td>4640</td>
     </tr>
     <tr>
-      <td>2020</td>
+      <th>12</th>
       <td>수소</td>
+      <td>2020</td>
       <td>1540</td>
       <td>888</td>
       <td>64</td>
@@ -314,8 +328,9 @@
       <td>10432</td>
     </tr>
     <tr>
-      <td>2021</td>
+      <th>13</th>
       <td>수소</td>
+      <td>2021</td>
       <td>2374</td>
       <td>1286</td>
       <td>307</td>
@@ -336,8 +351,9 @@
       <td>18876</td>
     </tr>
     <tr>
-      <td>2022</td>
+      <th>14</th>
       <td>수소</td>
+      <td>2022</td>
       <td>2896</td>
       <td>1865</td>
       <td>528</td>
@@ -358,8 +374,9 @@
       <td>28767</td>
     </tr>
     <tr>
-      <td>2023</td>
+      <th>15</th>
       <td>수소</td>
+      <td>2023</td>
       <td>3113</td>
       <td>2010</td>
       <td>618</td>
