--- a/html/친환경자동차/데이터프레임_수소전기차_연간_보조금_비교.html
+++ b/html/친환경자동차/데이터프레임_수소전기차_연간_보조금_비교.html
@@ -1,7 +1,7 @@
 <head>
   <link rel="stylesheet" href="/css/table.css">
 </head>
-<table border="1" class="dataframe">
+<table class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th></th>
@@ -14,17 +14,17 @@
   <tbody>
     <tr>
       <th>전기차 년도평균</th>
-      <td>1556.118750</td>
-      <td>1435.437500</td>
-      <td>1296.84375</td>
-      <td>1249.281250</td>
+      <td>1556</td>
+      <td>1435</td>
+      <td>1296</td>
+      <td>1249</td>
     </tr>
     <tr>
       <th>수소차 년도평균</th>
-      <td>3450.133333</td>
-      <td>3370.133333</td>
-      <td>3369.72973</td>
-      <td>3325.810811</td>
+      <td>3450</td>
+      <td>3370</td>
+      <td>3369</td>
+      <td>3325</td>
     </tr>
   </tbody>
 </table>
