--- a/html/친환경자동차/데이터프레임_수소차_보조금.html
+++ b/html/친환경자동차/데이터프레임_수소차_보조금.html
@@ -1,7 +1,7 @@
 <head>
   <link rel="stylesheet" href="/css/table.css">
 </head>
-<table border="1" class="dataframe">
+<table class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th></th>
@@ -16,74 +16,74 @@
     <tr>
       <th>0</th>
       <td>서울특별시</td>
-      <td>3500.000000</td>
-      <td>2250.000000</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
+      <td>3500</td>
+      <td>2250</td>
+      <td>3250.0</td>
+      <td>3250.0</td>
     </tr>
     <tr>
       <th>1</th>
       <td>부산광역시</td>
-      <td>3450.000000</td>
-      <td>3450.000000</td>
-      <td>3450.000000</td>
-      <td>3350.000000</td>
+      <td>3450</td>
+      <td>3450</td>
+      <td>3450.0</td>
+      <td>3350.0</td>
     </tr>
     <tr>
       <th>2</th>
       <td>대구광역시</td>
-      <td>3500.000000</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
+      <td>3500</td>
+      <td>3250</td>
+      <td>3250.0</td>
+      <td>3250.0</td>
     </tr>
     <tr>
       <th>3</th>
       <td>인천광역시</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
+      <td>3250</td>
+      <td>3250</td>
+      <td>3250.0</td>
+      <td>3250.0</td>
     </tr>
     <tr>
       <th>4</th>
       <td>광주광역시</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
+      <td>3250</td>
+      <td>3250</td>
+      <td>3250.0</td>
+      <td>3250.0</td>
     </tr>
     <tr>
       <th>5</th>
       <td>대전광역시</td>
-      <td>3450.000000</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
+      <td>3450</td>
+      <td>3250</td>
+      <td>3250.0</td>
+      <td>3250.0</td>
     </tr>
     <tr>
       <th>6</th>
       <td>울산광역시</td>
-      <td>3400.000000</td>
-      <td>3400.000000</td>
-      <td>3400.000000</td>
-      <td>3400.000000</td>
+      <td>3400</td>
+      <td>3400</td>
+      <td>3400.0</td>
+      <td>3400.0</td>
     </tr>
     <tr>
       <th>7</th>
       <td>세종특별자치시</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
-      <td>3250.000000</td>
+      <td>3250</td>
+      <td>3250</td>
+      <td>3250.0</td>
+      <td>3250.0</td>
     </tr>
     <tr>
       <th>8</th>
       <td>지역평균</td>
-      <td>3458.358209</td>
-      <td>3394.179104</td>
-      <td>3378.939394</td>
-      <td>3331.212121</td>
+      <td>3458</td>
+      <td>3394</td>
+      <td>3378.0</td>
+      <td>3331.0</td>
     </tr>
   </tbody>
 </table>
