--- a/html/친환경자동차/데이터프레임_수소전기차_100km_충전비용.html
+++ b/html/친환경자동차/데이터프레임_수소전기차_100km_충전비용.html
@@ -1,7 +1,7 @@
 <head>
   <link rel="stylesheet" href="/css/table.css">
 </head>
-<table border="1" class="dataframe">
+<table class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th>이름</th>
