--- a/html/친환경자동차/데이터프레임_수소전기차_충전_평균가격.html
+++ b/html/친환경자동차/데이터프레임_수소전기차_충전_평균가격.html
@@ -1,7 +1,7 @@
 <head>
   <link rel="stylesheet" href="/css/table.css">
 </head>
-<table border="1" class="dataframe">
+<table class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th>구분</th>
@@ -26,7 +26,7 @@
     <tr>
       <td>일반</td>
       <td>수소</td>
-      <td>9351</td>
+      <td>10104</td>
       <td>96.20</td>
     </tr>
   </tbody>
