--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
          <description class="desc">
             <h2>[데이터 분석]</h2>
             <ul class="ecoFriendlyCar_desc">
-               <li>점진적으로 증가하거나 점진적으로 감소할 것이라는 예상과는 달리 각각의 요소의 변화가 연도에 따라 감소할 때도 증가할 때도 있는 것을 알 수 있었다.</li>
-               <li>수질을 결정하는 평가 요인들은 각각 해당 년도에 기후, 주변 환경 변화 등에 영향을 받아 불규칙적으로 변화한다는 것을 예상할 수 있다.</li>
+               <li>대기오염의 주된 원인 중 하나는 자동차의 배기가스이다. 만약 친환경 자동차가 늘어난다면 대기오염이 줄어들까? 라는 의문으로 시작해 분석한 결과,<br>친환경 자동차의 비율이 증가할수록 대기오염 물질의 농도는 감소한다는 것을 알 수 있다. </li>
+               <li>친환경 자동차의 등록 건수는 매년 증가하는 그래프를 보이지만 매년 낮아지는 보조금과 맞물려 친환경 자동차 구매를 고민하고 있다면<br>최대한 빨리 구매하는 것이 현명한 선택이라 예상한다.</li>
+               <li>현재까지의 추세로 보아 수소차의 충전소보다 전기차 충전소가 많으며 연비 측면과 아울러 차종 역시 전기차가 우세한 것으로 보아 잠재적<br>구매자들은 수소차보다는 전기차를 선호할 것으로 예상된다.</li>
             </ul>
          </description>
 
