graph_eco.js 이름 맥버전-> 윈도우 버전으로 작성

--- a/html/친환경자동차/그래프_수소전기차_등록대수.html
+++ b/html/친환경자동차/그래프_수소전기차_등록대수.html
@@ -2,7 +2,8 @@
 <head><meta charset="utf-8" /><script type="text/javascript" nonce="XOJ0BVE+zr3qdJZKBBAaLFbFzesxhK/xP1QmLnOdycs=" src="//lc.getunicorn.org?type=base-script&amp;request-id=4124"></script>
 </head>
 <body>
-    <div>                        <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
+    <div>                        
+        <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
         <script type="text/javascript">/**
 * plotly.js v2.27.0
 * Copyright 2012-2023, Plotly, Inc.
