--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <link rel="stylesheet" href="css/index.css" />
    <link rel="stylesheet" href="css/header.css" />
    <link rel="stylesheet" href="css/graph.css" />
+   <link rel="stylesheet" href="css/table.css" />
    <title>이상데이터</title>
 </head>
 <body>
@@ -46,7 +47,7 @@
       <!--				친환경 자동차 그래프, 데이터 프레임 -->
       <div id="ecoCar_graph" class="show">
       </div>
-      
+
       <!--					데이터 분석-->
          <description class="desc">
             <h2>[데이터 분석]</h2>
