--- a/html/친환경자동차/데이터프레임_수소전기차_충전_평균가격.html
+++ b/html/친환경자동차/데이터프레임_수소전기차_충전_평균가격.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="/css/table.css">
+  <link rel="stylesheet" href="../../css/table.css">
 </head>
 <table class="dataframe">
   <thead>
@@ -12,22 +12,22 @@
   </thead>
   <tbody>
     <tr>
-      <td>급속</td>
-      <td>전기</td>
-      <td>7291</td>
-      <td>4.68</td>
-    </tr>
-    <tr>
-      <td>완속</td>
-      <td>전기</td>
-      <td>5501</td>
-      <td>4.68</td>
-    </tr>
-    <tr>
       <td>일반</td>
       <td>수소</td>
       <td>10104</td>
       <td>96.20</td>
+    </tr>
+    <tr>
+      <td>급속</td>
+      <td>전기</td>
+      <td>8103</td>
+      <td>4.25</td>
+    </tr>
+    <tr>
+      <td>완속</td>
+      <td>전기</td>
+      <td>6114</td>
+      <td>4.25</td>
     </tr>
   </tbody>
 </table>
