데이터프레임 수소전기차 연간보조금비교 변경

--- a/html/친환경자동차/데이터프레임_수소전기차_연간_보조금_비교.html
+++ b/html/친환경자동차/데이터프레임_수소전기차_연간_보조금_비교.html
@@ -4,7 +4,7 @@
 <table class="dataframe">
   <thead>
     <tr style="text-align: right;">
-      <th></th>
+      <th>지역구분</th>
       <th>2020</th>
       <th>2021</th>
       <th>2022</th>
@@ -13,18 +13,18 @@
   </thead>
   <tbody>
     <tr>
-      <th>전기차 년도평균</th>
+      <td>전기차 년도평균</td>
       <td>1556</td>
       <td>1435</td>
       <td>1296</td>
       <td>1249</td>
     </tr>
     <tr>
-      <th>수소차 년도평균</th>
+      <td>수소차 년도평균</td>
       <td>3450</td>
       <td>3370</td>
-      <td>3369</td>
-      <td>3325</td>
+      <td>3371</td>
+      <td>3327</td>
     </tr>
   </tbody>
 </table>
