--- a/html/데이터프레임_수소전기차_충전_평균가격.html
+++ b/html/데이터프레임_수소전기차_충전_평균가격.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="../../css/table.css">
+  <link rel="stylesheet" href="../css/table.css">
 </head>
 <table class="dataframe">
   <thead>
