eco_car.py 서버 주소 수정

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <!--			헤더 영역-->
    <header class="header_area">
       <div class="header">
-         이상데이터
+         친환경 자동차 구매 지표
       </div>
 
       <div class="tab_bar_area">
@@ -66,7 +66,7 @@
                <iframe
                      name="자동차 추천"
                      class="rmd_eco_car"
-                     src="http://43.202.33.122:8501"
+                     src="http://3.36.65.164:8501/"
                      width="100%"
                      height="1500px"
                      frameborder="0">
